--- a/scss/global/_settings.scss
+++ b/scss/global/_settings.scss
@@ -102,8 +102,8 @@ $button-primary-bkg:    $brand-color-primary  !default;
 $button-primary-border: $brand-color-primary  !default;
 $button-primary-color:  #fff                  !default;
 
-$button-secondary-bkg:    $brand-color-tertiary  !default;
-$button-secondary-border: $brand-color-tertiary  !default;
+$button-secondary-bkg:    $brand-color-secondary  !default;
+$button-secondary-border: $brand-color-secondary  !default;
 $button-secondary-color:  $font-color-base       !default;
 
 $button-tertiary-bkg:     $brand-color-neutral  !default;
