--- a/scss/mixins/_states.scss
+++ b/scss/mixins/_states.scss
@@ -4,8 +4,8 @@
     background: false,
     color: false,
     placeholder: false,
-    icon: false,
-    outline: false
+    button: false,
+    outline: false,
   ), $options);
 
   @each $state in $states {
@@ -30,6 +30,11 @@
       @if map-get($options, outline) == true {
         &:focus {
           outline-color: $border;
+        }
+      }
+      @if map-get($options, button) == true {
+        > .button {
+          color: $color;
         }
       }
     }
